--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,6 @@
 html, body{
-	/*background-color: #fafbfb !important;*/
+	background-color: #f9fafa !important;
+	padding-bottom: 50px;
 }
 
 .side_nav_ul{
@@ -7,13 +8,46 @@ html, body{
 	padding-left: 0px;
 }
 
-.active{
-	background-color: #fff;
-	width: 100%;
-}
-
 #app{
 	font-family: 'Open Sans', sans-serif;
+}
+
+p{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 1em;
+}
+
+.a_nav{
+	font-family: 'Open Sans', sans-serif;
+	color: #000 !important;
+}
+
+.ht_location{
+	display: inline-block;
+}
+
+.ht_end_date{
+	display: inline-block;
+}
+
+.ht_start_date{
+	display: inline-block;
+}
+
+.ht_cost{
+	display: inline-block;
+}
+
+.ht_c_name{
+	display: inline-block;
+}
+
+.ht_c_email{
+	display: inline-block;
+}
+
+.ht_c_pnum{
+	display: inline-block;
 }
 
 .main{
@@ -21,19 +55,38 @@ html, body{
 	font-family: 'Open Sans', sans-serif;
 }
 
+/*.container{
+	max-width: 70% !important;
+}*/
+
 .picture{
 	width: 100%;
-	height: 230px;
-	background-color: #e1e1e1;
+	height: 150px;
+
+	margin-top: 30px;
+	margin-bottom: 30px;
+
+	display: block;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .client_name{
-	font-size: 3em;
+	font-size: 2.5em;
 	margin-top: -15px;
+}
+
+.welcome{
+	font-size: 1.5em;
 }
 
 .client_address{
 	margin-top: -15px;
+	font-size: 1em;
 }
 
 .side_nav{
@@ -48,17 +101,64 @@ html, body{
 .welcome_text{
 	position: absolute !important;
 	bottom: -20px;
-	left: 30px;
+	left: 10px;
 }
 
 .jobs_wrapper{
-	padding: 50px;
+	padding: 30px;
+	background-color: #fff;
+	margin-top: 50px;
+	border-radius: 30px;
+	width: auto;
 
+	-webkit-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
+	-moz-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
+	box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
+
+}
+
+#addDataTable_wrapper{
+	width: 870px;
+}
+
+/*#addDataTable {
+  table-layout: fixed;
+  width: 100% !important;
+}
+#addDataTable td{
+  width: auto !important;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+#addDataTable th{
+  width: auto !important;
+  white-space: normal;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}*/
+
+.card{
+	border: none !important;
+	padding: 20px;
+	margin-top: 50px;
+	border-radius: 30px !important;
+
+	-webkit-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
+	-moz-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
+	box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
 }
 
 .fc-left h2{
 	font-size: 2em !important;
 }
+
+.btn-primary{
+	background-color: #5bc0de;
+	color: #fff !important;
+	border-radius: 30px !important;
+}
+
 
 #sidebar-wrapper {
   min-height: 100vh;
@@ -67,36 +167,107 @@ html, body{
   -moz-transition: margin .25s ease-out;
   -o-transition: margin .25s ease-out;
   transition: margin .25s ease-out;
-  background-color: #f8f9fa;
+  background-color: #f5f9f8;
 }
 
 #sidebar-wrapper .sidebar-heading {
   padding: 0.875rem 1.25rem;
   font-size: 1.2rem;
-  background-color: #f8f9fa;
+  background-color: #f5f9f8;
 }
 
 .list-group-item-action{
-	background-color: #f8f9fa !important;
+	background-color: #fff !important;
+	border: none !important;
+
+	margin-top: 10px;
+	margin-bottom: 10px;
+
+	transition: all .2s ease-in-out;
+ 	cursor: pointer;
+}
+
+.list-group-item-action:hover{
+	border: none !important;
+	border-radius: 30px;
+
+	z-index: 10;
+
+	transform: scale(1.1);
+
+	margin-top: 10px;
+	margin-bottom: 10px;
+
+	-webkit-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
+	-moz-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
+	box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
 }
 
 #sidebar-wrapper .list-group {
   width: 100%;
-  background-color: #f8f9fa;
+  background-color: #f9fafa;
+  border-radius: 30px;
+  margin-top: 20px;
+}
+.list-group-item:first-child, .list-group-item:last-child{
+	border-radius: 30px !important;
 }
 
 .active {
-  color: #fff !important;
-  background-color: #428bca !important;
-  border: none !important;
+	color: #fff !important;
+	background-color: #428bca !important;
+	border: none !important;
+	border-radius: 30px;
+  
+}
+
+.navbar{
+	background-color: #fff !important;
+}
+
+.dropdown{
+	padding: 20px;
+}
+
+.sidenav_mobile{
+	display: none;
 }
 
 
-@media (min-width: 768px) {
+.sidenav{
+	display: block;
+}
+
+.main_content{
+	padding-left: 50px;
+}
+
+
+@media (max-width: 800px) {
+
   #sidebar-wrapper {
     margin-left: 0;
   }
-
+  .sidenav_mobile{
+  	display: block;
+  }
+  .sidenav{
+  	display: none;
+  }
+  .a_nav{
+  	margin-top: 10px;
+  	padding-left: 20px;
+  }
+  .picture{
+  	display: none;
+  }
+  .main_content{
+	padding-left: 30px;
+	padding-right: 30px;
+  }
+  #addDataTable_wrapper{
+	width: 350px;
+}
 }
 
 // workaround
