--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -182,6 +182,8 @@ p{
 
 	margin-top: 10px;
 	margin-bottom: 10px;
+	margin-left: 5px;
+	margin-right: 5px;
 
 	transition: all .2s ease-in-out;
  	cursor: pointer;
@@ -190,17 +192,18 @@ p{
 .list-group-item-action:hover{
 	border: none !important;
 	border-radius: 30px;
+	color: #fff !important;
 
 	z-index: 10;
 
-	transform: scale(1.1);
+	background-color: #428bca !important;
+
+	/*transform: scale(1.1);*/
 
 	margin-top: 10px;
 	margin-bottom: 10px;
 
-	-webkit-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
-	-moz-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
-	box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
+	
 }
 
 #sidebar-wrapper .list-group {
