--- a/public/css/intlTelInput.css
+++ b/public/css/intlTelInput.css
@@ -29,7 +29,8 @@
     margin-top: 0 !important;
     margin-bottom: 0 !important;
     padding-right: 36px;
-    margin-right: 0; }
+    margin-right: 0; 
+    width: 100%;}
   .intl-tel-input .flag-container {
     position: absolute;
     top: 0;
@@ -968,13 +969,13 @@
   width: 20px;
   height: 15px;
   box-shadow: 0px 0px 1px 0px #888;
-  background-image: url("../img/flags.png");
+  background-image: url("https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/11.0.14/img/flags.png");
   background-repeat: no-repeat;
   background-color: #DBDBDB;
   background-position: 20px 0; }
   @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
     .iti-flag {
-      background-image: url("../img/flags@2x.png"); } }
+      background-image: url("https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/11.0.14/img/flags@2x.png"); } }
 
 .iti-flag.np {
   background-color: transparent; }
