--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,11 +1,19 @@
 html, body{
-	background-color: #f9fafa !important;
+	background-color: #060606 !important;
 	padding-bottom: 50px;
 }
 
 .side_nav_ul{
 	list-style-type: none;
 	padding-left: 0px;
+}
+
+.form_submit{
+	display: block;
+}
+
+.form_edit{
+	display: none;
 }
 
 #app{
@@ -17,25 +25,225 @@ p{
 	font-size: 1em;
 }
 
+h1, h2, h3, h4, h5, h6, label, .navbar-brand, #navbarDropdown{
+	color: #fff;
+}
+
+.dropdown-menu{
+	background-color: #252525 !important;
+}
+
+.dropdown-item{
+	color: #fff !important;
+}
+
+#calendar{
+	color: #fff !important;
+}
+
+.fc-unthemed td.fc-today, .fc-today-button{
+	background-color: #252525 !important;
+}
+
+.custom-select{
+	background-color: #252525 !important;
+	border-color: #252525 !important;
+
+	color: #fff !important;
+}
+
+.dataTables_info{
+	color: #fff !important;
+}
+
+.page-item.active .page-link{
+	background-color: #c39331 !important;
+	border-color: #c39331 !important;
+}
+
+.page-link{
+	background-color: #252525 !important;
+	border-color: #252525 !important;
+
+	color: #fff !important;
+}
+
+.mdl-data-table{
+	background-color: #131313 !important;
+	color: #fff !important;
+}
+
+.mdl-data-table th{
+	color: #fff !important;
+	text-shadow: none !important; 
+}
+
+.odd{
+	background-color: #252525 !important;
+	border-color: #252525 !important;
+}
+
+.even:hover{
+	background-color: #252525 !important;
+	border-color: #252525 !important;
+}
+
+.modal-body{
+	background-color: #131313 !important;
+	border-color: #131313 !important;
+
+	color: #fff !important;
+}
+
+.modal-header{
+	background-color: #131313 !important;
+	border-color: #131313 !important;
+
+	color: #fff !important;
+}
+
+.modal-body i{
+	color: #fff !important;
+}
+
+.input-group-text{
+	background-color: #2c2c2c !important;
+	border-color: #2c2c2c !important;
+	color: #fff !important;
+}
+
+.btn-link{
+	color: #c39331 !important;
+}
+
+input, textarea, select{
+	background: #252525 !important;
+	border-color: #252525 !important;
+
+	color: #fff !important;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered { color: #fff !important; }
+
+.select2-container--default .select2-selection--single{
+	background: #252525 !important;
+	border-color: #252525 !important;
+
+	color: #fff !important;
+
+	width: 100% !important;
+	height: calc(1.5em + .75rem + 2px) !important;
+}
+
+.select2-dropdown{
+	background: #252525 !important;
+	border-color: #252525 !important;
+
+	color: #fff !important;
+
+	-webkit-box-shadow: -2px 12px 23px -3px rgba(0,0,0,0.75);
+	-moz-box-shadow: -2px 12px 23px -3px rgba(0,0,0,0.75);
+	box-shadow: -2px 12px 23px -3px rgba(0,0,0,0.75);
+}
+
+.select_option{
+	padding-top: 20px !important;
+	padding-bottom: 20px !important; 
+}
+
+.select2-search__field{
+	background: #131313 !important;
+	border-color: #131313 !important;
+
+	color: #fff !important;
+}
+
+.card-header, .card-body{
+	color: #fff !important;
+}
+
+.form-check-input{
+	background: #252525 !important;
+	border-color: #252525 !important;
+}
+
 .a_nav{
 	font-family: 'Open Sans', sans-serif;
-	color: #000 !important;
+	color: #fff !important;
 }
 
 .ht_location{
 	display: inline-block;
+	border: none;
+	margin-bottom: 20px;
+
+	background-color: #131313 !important;
 }
 
 .ht_end_date{
 	display: inline-block;
+	border: none;
+	margin-bottom: 20px;
+
+	background-color: #131313 !important;
 }
 
 .ht_start_date{
 	display: inline-block;
+	border: none;
+	margin-bottom: 20px;
+
+	background-color: #131313 !important;
 }
 
 .ht_cost{
 	display: inline-block;
+	border: none;
+	margin-bottom: 20px;
+
+	background-color: #131313 !important;
+}
+
+.m_job_name{
+	display: inline-block;
+	border: none;
+	margin-bottom: 30px;
+
+	height: 50px;
+	font-size: 2em;
+
+	background-color: #131313 !important;
+}
+
+.m_desc{
+	border: none;
+
+	background-color: #131313 !important;
+}
+
+
+#ht_cost2{
+	display: none;
+}
+
+#ht_start_date2{
+	display: none;
+}
+
+#ht_end_date2{
+	display: none;
+}
+
+#ht_location2{
+	display: none;
+}
+
+#m_job_name2{
+	display: none;
+}
+
+#m_desc{
+	display: none;
 }
 
 .ht_c_name{
@@ -59,11 +267,24 @@ p{
 	max-width: 70% !important;
 }*/
 
-.picture{
-	width: 100%;
-	height: 150px;
+.pagination{
+	float: right !important;
+}
 
-	margin-top: 30px;
+.picture{
+	width: 120px;
+	height: 120px;
+
+	margin-top: 20px;
+
+	display: block;
+}
+
+.picture2{
+	width: 115px;
+	height: 115px;
+
+	margin-top: 60px;
 	margin-bottom: 30px;
 
 	display: block;
@@ -106,19 +327,22 @@ p{
 
 .jobs_wrapper{
 	padding: 30px;
-	background-color: #fff;
-	margin-top: 50px;
+	background-color: #131313;
 	border-radius: 30px;
 	width: auto;
 
-	-webkit-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
+	/*-webkit-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
 	-moz-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
-	box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
+	box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);*/
 
 }
 
+.fc-unthemed .fc-content, .fc-unthemed .fc-divider, .fc-unthemed .fc-list-heading td, .fc-unthemed .fc-list-view, .fc-unthemed .fc-popover, .fc-unthemed .fc-row, .fc-unthemed tbody, .fc-unthemed td, .fc-unthemed th, .fc-unthemed thead{
+	border-color: #131313 !important;
+}
+
 #addDataTable_wrapper{
-	width: 870px;
+	width: 100%;
 }
 
 /*#addDataTable {
@@ -144,21 +368,23 @@ p{
 	margin-top: 50px;
 	border-radius: 30px !important;
 
-	-webkit-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
+	background-color: #131313 !important;
+
+	/*-webkit-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
 	-moz-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
-	box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
+	box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);*/
 }
 
 .fc-left h2{
 	font-size: 2em !important;
 }
 
-.btn-primary{
-	background-color: #5bc0de;
+.btn{
+	/*background-color: #c39331 !important;*/
+	/*border-color: #c39331 !important;*/
 	color: #fff !important;
 	border-radius: 30px !important;
 }
-
 
 #sidebar-wrapper {
   min-height: 100vh;
@@ -177,7 +403,8 @@ p{
 }
 
 .list-group-item-action{
-	background-color: #fff !important;
+	background-color: #131313 !important;
+	color: #fff !important;
 	border: none !important;
 
 	margin-top: 10px;
@@ -196,7 +423,7 @@ p{
 
 	z-index: 10;
 
-	background-color: #428bca !important;
+	background-color: #c39331 !important;
 
 	/*transform: scale(1.1);*/
 
@@ -212,20 +439,21 @@ p{
   border-radius: 30px;
   margin-top: 20px;
 }
-.list-group-item:first-child, .list-group-item:last-child{
+
+.list-group-item:first-child, .list-group-item:last-child, .list-group-item{
 	border-radius: 30px !important;
 }
 
 .active {
 	color: #fff !important;
-	background-color: #428bca !important;
+	background-color: #c39331 !important;
 	border: none !important;
 	border-radius: 30px;
   
 }
 
 .navbar{
-	background-color: #fff !important;
+	background-color: #131313 !important;
 }
 
 .dropdown{
@@ -246,7 +474,43 @@ p{
 }
 
 
-@media (max-width: 800px) {
+@media only screen and (max-width: 767px) {
+
+  	#sidebar-wrapper {
+   		margin-left: 0;
+  	}
+  	.sidenav_mobile{
+  		display: block;
+  	}
+  	.sidenav{
+  		display: none;
+  	}
+  	.a_nav{
+  		margin-top: 10px;
+  		padding-left: 20px;
+  	}
+  	.picture{
+		width: 100px;
+		height: 100px;
+
+		margin-top: 20px;
+		margin-bottom: 30px;
+
+		display: block;
+	}
+	.header_wrapper{
+		padding-left: 30px;
+	}
+  	/*#addDataTable_wrapper{
+		width: 340px;
+	}*/
+	/*.main{
+		padding-left: 30px;
+		padding-right: 30px;
+	}*/
+}
+
+/*@media (max-width: 1024px) {
 
   #sidebar-wrapper {
     margin-left: 0;
@@ -269,13 +533,15 @@ p{
 	padding-right: 30px;
   }
   #addDataTable_wrapper{
-	width: 350px;
-}
-}
+	width: 700px;
+  }
+}*/
 
 // workaround
+
 .intl-tel-input {
-  display: table-cell;
+  position: relative !important;
+  display: block !important;
 }
 .intl-tel-input .selected-flag {
   z-index: 4;
@@ -288,4 +554,10 @@ p{
   border-top-right-radius: 0;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 0;
+}
+
+.intl-tel-input input, .intl-tel-input input[type=text], .intl-tel-input input[type=tel]{
+	width: 100% !important;
+	border: 1px solid #252525 !important;
+	height: calc(1.5em + .75rem + 2px) !important;
 }
