--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -395,6 +395,8 @@ input, textarea, select{
 
 	background-color: #131313 !important;
 
+	margin-top: 20px;
+
 	/*-webkit-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
 	-moz-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
 	box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);*/
@@ -408,6 +410,8 @@ input, textarea, select{
 	background-color: #5bc0de !important;
 
 	text-align: center;
+
+	margin-top: 20px;
 
 	/*-webkit-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
 	-moz-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
@@ -423,6 +427,8 @@ input, textarea, select{
 
 	text-align: center;
 
+	margin-top: 20px;
+
 	/*-webkit-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
 	-moz-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
 	box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);*/
@@ -437,6 +443,8 @@ input, textarea, select{
 
 	text-align: center;
 
+	margin-top: 20px;
+
 	/*-webkit-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
 	-moz-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
 	box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);*/
@@ -450,6 +458,8 @@ input, textarea, select{
 	background-color: #d9534f !important;
 
 	text-align: center;
+
+	margin-top: 20px;
 
 	/*-webkit-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
 	-moz-box-shadow: 0px 10px 11px -1px rgba(89,88,89,0.4);
@@ -547,12 +557,12 @@ input, textarea, select{
 
 
 .sidenav{
-	padding-top: 18px;
+	padding-top: 38px;
 	display: block;
 
 	position: -webkit-sticky;
 	position: sticky;
-	top: 20px;
+	top: -10px;
 }
 
 .main_content{
